--- a/frontend/blog-app/src/components/AddBlog/AddBlog.module.css
+++ b/frontend/blog-app/src/components/AddBlog/AddBlog.module.css
@@ -2,17 +2,45 @@
     width: 360px;
     border: 2px solid #ccc;
     padding: 16px;
-    margin: 20px auto;
+    margin: 0px auto;
+    border-radius: 8px;
+    position: relative;
+    top: 40px;
 }
 
 .form input{
     display: block;
     width: 100%;
     box-sizing: border-box;
-    margin: 10px 0px;
+    margin: 5px 0px;
     padding: 5px;
 }
 
-.form input,label,button{
+.form input,label{
+    font-size: 16px;
+    width: 100%;
+    height: 100%;
+    color: white;
+}
+
+.container {
+    background-image: url("https://cdn.pixabay.com/video/2022/06/13/120172-720504774_tiny.mp4");
+    height: 39vw;
+   
+}
+
+button {
+    width: 100%;
     font-size: 16px;
 }
+
+.backgroundVideo {
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensures video covers the entire screen */
+  }
+
