--- a/frontend/blog-app/src/components/Pagination/pagination.module.css
+++ b/frontend/blog-app/src/components/Pagination/pagination.module.css
@@ -7,4 +7,5 @@
     border: none;
     border-radius: 8px;
     background-image: linear-gradient(315deg, #1fd1f9 0%, #b621fe 74%);
+    cursor: pointer;
 }
